Shang New Live/src/objects/Permission_Assignment__c.object
<CustomObject>
    <fields>
        <fullName>Assigned_Mobile_Module__c</fullName>
        <formula>Permission_Set__r.Mobile_Module__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned Mobile Module</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_Shifts__c</fullName>
        <label>Assigned Shifts</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Daily_Checklist_Session</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Notify__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Notify</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Operations_User__c</fullName>
        <label>Operations User</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Staff</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Permission Assignments</relationshipLabel>
        <relationshipName>Permission_Assignments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Permission_Set__c</fullName>
        <label>Permission Set</label>
        <referenceTo>Permission_Set__c</referenceTo>
        <relationshipLabel>Permission Assignments</relationshipLabel>
        <relationshipName>Permission_Assignments</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Property__c</fullName>
        <formula>Permission_Set__r.Property__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Property</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date_Time__c</fullName>
        <label>Start Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Status</valueSetName>
        </valueSet>
    </fields>
    <label>Permission Assignment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Operations_User__c</columns>
        <columns>Assigned_Mobile_Module__c</columns>
        <columns>Permission_Set__c</columns>
        <columns>Notify__c</columns>
        <columns>Assigned_Shifts__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PA-{000000000}</displayFormat>
        <label>Permission Assignment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Permission Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>